Fix spacing, alignment and mobile styles

--- a/src/assets/scss/cards.scss
+++ b/src/assets/scss/cards.scss
@@ -388,12 +388,28 @@
   }
 
   &.list-card {
+    .card-img {
+      background-color: $mediumgrey;
+      border-radius: $border-radius-small;
+      display: inline-flex;
+      justify-content: center;
+
+      img {
+        border-radius: 0 calc(0.25rem - 1px) calc(0.25rem - 1px) 0;
+        object-fit: contain;
+        height: auto;
+        max-height: 100%;
+        width: auto;
+      }
+    }
+
     .data-and-buttons-wrapper {
       color: $mediumgrey;
       margin: auto auto 0 0;
 
       >  * {
         margin-right: 1rem;
+        margin-top: 0.5rem;
       }
 
       [class^='icon-'],
@@ -416,6 +432,7 @@
           }
 
           &.pin-button {
+            display: inline-flex;
             color: $darkgreen;
           }
         }
@@ -425,37 +442,34 @@
     @media (min-width: $bp-medium) {
       min-height: 0;
 
+      .card-img {
+        order: 2;
+        width: 10rem;
+        height: 10rem;
+        max-height: none;
+        min-height: 0;
+        margin: 1rem;
+      }
+
       .card-wrapper {
         flex-direction: row;
         justify-content: space-between;
 
-        .card-img {
-          background-color: $mediumgrey;
-          border-radius: $border-radius-small;
-          margin: 1rem;
-          display: inline-flex;
-          justify-content: center;
-          height: 10rem;
-          max-height: none;
-          min-height: 0;
-          order: 2;
-          width: 10rem;
-
-          img {
-            border-radius: 0 calc(0.25rem - 1px) calc(0.25rem - 1px) 0;
-            object-fit: contain;
-            height: auto;
-            max-height: 100%;
-            width: auto;
-          }
-        }
-
         .card-body {
           flex: none;
-          padding-right: 1rem;
+          padding: 1.25rem;
           width: calc(100% - 12rem);
           display: flex;
           flex-direction: column;
+        }
+
+        .card-subtitle {
+          font-size: $font-size-small;
+          margin-bottom: 1.125rem;
+        }
+
+        .card-title {
+          margin-bottom: 1rem;
         }
       }
     }
